# Ormat

./: .gitignore  Ormat.cabal  README.md
src/: Main.hs
