name:                Ormat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ShrykeWindgrace/Ormat#readme
license:             BSD3
license-file:        LICENSE
author:              Timofey Zakrevskiy
maintainer:          tz@academ.email
copyright:           Timofey Zakrevskiy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Ormat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
